==> pkourany/ModBus_RS485_Slave/firmware/ModbusRtu.cpp <==
#include "ModbusRtu.h"
#include "Serial2/Serial2.h"
#include "application.h"

void Modbus::begin(long u32speed) {

  switch( u8serno ) {
  case 1:
    port = &Serial1;
    break;

  case 2:
    port = &Serial2;
    break;

  case 0:
  default:
    port = &Serial1;
    break;
  }

  // port->begin(u32speed, u8config);
  port->begin(u32speed);
  if (u8txenpin > 1 && u8rxenpin > 1) { // pin 0 & pin 1 are reserved for RX/TX
    // return RS485 transceiver to transmit mode
    pinMode(u8txenpin, OUTPUT);
    pinMode(u8rxenpin, OUTPUT);
    rxTxMode(RXEN);
  }

  port->flush();
  u8lastRec = u8BufferSize = 0;
  u16InCnt = u16OutCnt = u16errCnt = 0;
}

void Modbus::begin() {
  begin(19200);
}

int8_t Modbus::getRxBuffer() {

  boolean bBuffOverflow = false;

  if (u8txenpin > 1 && u8rxenpin > 1) rxTxMode(RXEN);

  u8BufferSize = 0;
  #ifdef LOGGING
    Serial.print("MODBUS> getRxbuffer output: ");
  #endif
  while ( port->available() ) {
    au8Buffer[ u8BufferSize ] = port->read();
    #ifdef LOGGING
      Serial.print(au8Buffer[ u8BufferSize ], HEX);
      Serial.print(" ");
    #endif
    u8BufferSize ++;

    if (u8BufferSize >= MAX_BUFFER) bBuffOverflow = true;
  }
  #ifdef LOGGING
    Serial.println();
  #endif
  u16InCnt++;

  if (bBuffOverflow) {
    u16errCnt++;
    #ifdef LOGGING
      Serial.print("MODBUS> ERR_BUFF_OVERFLOW");
      Serial.println();
    #endif
    return ERR_BUFF_OVERFLOW;
  }
  #ifdef LOGGING
    Serial.print("MODBUS> Buffer size: ");
    Serial.print(u8BufferSize);
    Serial.println();
  #endif
  return u8BufferSize;
}

void Modbus::sendTxBuffer() {
  //uint8_t i = 0;
  #ifdef LOGGING
    Serial.print("MODBUS> Sending tx buffer");
    Serial.println();
  #endif

  // append CRC to message
  uint16_t u16crc = calcCRC( u8BufferSize );
  au8Buffer[ u8BufferSize ] = u16crc >> 8;
  u8BufferSize++;
  au8Buffer[ u8BufferSize ] = u16crc & 0x00ff;
  u8BufferSize++;

  // set RS485 transceiver to transmit mode

  #ifdef LOGGING
    Serial.print("MODBUS> sendTxBuffer -- ");
    for (uint8_t i = 0; i < u8BufferSize; i++) {
      Serial.print(au8Buffer[i], HEX);
      Serial.print(" ");
    }
    Serial.println();
  #endif

  if (u8txenpin > 1 && u8rxenpin > 1) {
/*    switch( u8serno ) {
    case 1:
      UCSR1A=UCSR1A |(1 << TXC1);
      break;

    case 2:
      UCSR2A=UCSR2A |(1 << TXC2);
      break;

    case 0:
    default:
      UCSR0A=UCSR0A |(1 << TXC0);
      break;
    }
*/
    #ifdef LOGGING
      Serial.print("MODBUS> tx buffer set to transmit");
      Serial.println();
    #endif
    rxTxMode(TXEN);
  }

  // transfer buffer to serial line
  port->write( au8Buffer, u8BufferSize );

  // keep RS485 transceiver in transmit mode as long as sending
  port->flush();	//waits for transmittion to complete before returning

  // #ifdef LOGGING
  //   Serial.print("MODBUS> tx buffer write to serial line then flush");
  //   Serial.println();
  // #endif

  if (u8txenpin > 1 && u8rxenpin > 1) {
/*    switch( u8serno ) {
    case 1:
      while (!(UCSR1A & (1 << TXC1)));
      break;

    case 2:
      while (!(UCSR2A & (1 << TXC2)));
      break;

    case 0:
    default:
      while (!(UCSR0A & (1 << TXC0)));
      break;
    }
*/

    // return RS485 transceiver to receive mode
    rxTxMode(RXEN);
    #ifdef LOGGING
      Serial.print("MODBUS> tx buffer switch back to rx mode");
      Serial.println();
    #endif
  }
  //port->flush();
  u8BufferSize = 0;

  // set time-out for master
  u32timeOut = millis() + (unsigned long) u16timeOut;

  // increase message counter
  u16OutCnt++;
}
